# okasaki

./: .gitignore  README.md  default.nix  okasaki.cabal  okasaki.nix
Chapter2/: BST.hs  Set.hs  Stack.hs  Tree.hs
Chapter3/: RedBlackTree.hs
Chapter5/: BatchedQueue.hs
Chapter6/: BankersQueue.hs  PhysicistQueue.hs
Chapter7/: RealTimeQueue.hs
Experiment/: RealTimeQueues.hs
Experiments/RealTimeQueues/: Main.hs
Experiments/RedBlackTrees/: Main.hs
Util/: Suspension.hs
app/: Experiment.hs  Main.hs
docs/final-work/: refs.bib  report.aux  report.bbl  report.blg  report.out  report.tex
docs/final-work/_minted-report/: 55A0BF10F62879D9FB50DF945AE056E05A9B02C41B98D8D3B8AF720307949D74.pygtex
docs/notes/10-data-structural/: notes.md
docs/notes/11-implicit-recursive-slowdown/: notes.md
docs/notes/5-fundamentals-of-amortization/: report.tex
docs/notes/6-amortization-and-persistence-via-lazy-evaluation/: notes.md
docs/notes/7-eliminating-amortization/: notes.md
docs/notes/8-lazy-rebuild/: notes.md
docs/notes/9-numerical-representations/: notes.md
docs/red-black-trees/: Makefile  refs.bib  report.tex
src/: Lib.hs
test/Chapter3/: RedBlackTreeSpec.hs
