cabal-version:       3.0

name:                okasaki
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
copyright:           2020 Arnau Abella
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
tested-with:         GHC == 8.8.1
bug-reports:         https://github.com/monadplus/okasaki/issues
synopsis:            Purely Functional Data Structures - Chris Okasaki
description:
category:            Machine Learning
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://github.com/monadplus/okasaki

common common-options
  ghc-options: -Wall
               -O3
  default-language: Haskell2010

common common-dependencies
  build-depends: base            >=4.9     && <4.14

executable okasaki
  import: common-dependencies
  import: common-options
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: okasaki
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N

library
  import: common-dependencies
  import: common-options
  build-depends:
       async       >=2.2.2    && <3.0.0
     , bytestring  >=0.10.8.2 && <0.11.0.0
     , containers  >=0.5.0.1  && <0.7
     , directory   >=1.3.0.0  && <1.4.0.0
     , filepath    >=1.4.0.0  && <1.5.0.0
     , mtl         >=2.0.0.0  && <2.3
     , stm         >=2.5.0.0  && <2.6.0.0
     , text        >=1.2.3.0  && <2.0.0.0
     , time        >=1.8.0.1  && <2.0.0.0
  exposed-modules:
     Lib
  other-modules:
  default-extensions: OverloadedStrings
  hs-source-dirs: src

test-suite foldl-tests
  import: common-dependencies
  import common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: hspec             >=2.6.0    && <2.8
               , QuickCheck        >=2.12     && <2.14
  other-modules:
  ghc-options:   -threaded
                 -rtsopts
                 -with-rtsopts=-N
