cabal-version:       >= 1.10

name:                okasaki
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
copyright:           2020 Arnau Abella
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
tested-with:         GHC == 8.8.3
bug-reports:         https://github.com/monadplus/okasaki/issues
synopsis:            Purely Functional Data Structures - Chris Okasaki
description:
category:            Machine Learning
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://github.com/monadplus/okasaki

executable experiment-1
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app

  build-depends:   okasaki,
                   base           >=4.12    && <4.15,
                   foldl          ==1.4.6   && <1.4.7,
                   QuickCheck     >=2.12    && <2.14

  other-modules: Experiment

  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -O2

               -Wall
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wcompat
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -fhide-source-paths
               -freverse-errors

executable experiment-2
  default-language: Haskell2010
  main-is: Experiment/RealTimeQueues.hs

  build-depends:   okasaki,
                   base           >=4.12    && <4.15,
                   foldl          ==1.4.6   && <1.4.7,
                   QuickCheck     >=2.12    && <2.14

  other-modules: Experiment

  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -O2

               -Wall
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wcompat
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -fhide-source-paths
               -freverse-errors

library
  default-language: Haskell2010

  build-depends:
       async       >=2.2.2    && <3.0.0
     , base        >=4.12     && <4.15
     , bytestring  >=0.10.8.2 && <0.11.0.0
     , containers  >=0.5.0.1  && <0.7
     , deepseq     >=1.4.4.0  && <1.5
     , directory   >=1.3.0.0  && <1.4.0.0
     , filepath    >=1.4.0.0  && <1.5.0.0
     , mtl         >=2.0.0.0  && <2.3
     , QuickCheck  >=2.12     && <2.14
     , stm         >=2.5.0.0  && <2.6.0.0
     , strict-list >=0.1.5    && <1.6
     , text        >=1.2.3.0  && <2.0.0.0
     , time        >=1.8.0.1  && <2.0.0.0

  exposed-modules:
     Chapter2.Tree
     Chapter2.Set
     Chapter2.Stack

     Chapter3.RedBlackTree

     Chapter5.BatchedQueue

     Chapter6.BankersQueue
     Chapter6.PhysicistQueue

     Chapter7.RealTimeQueue

  other-modules:
     Util.Suspension

  default-extensions:
    OverloadedStrings

  -- hs-source-dirs: src

  ghc-options: -Wall
               -Werror
               -O2

test-suite okasaki-tests
  default-language: Haskell2010

  type: exitcode-stdio-1.0

  main-is: Spec.hs

  hs-source-dirs: test

  other-modules:  Chapter3.RedBlackTreeSpec

  ghc-options: -Wall
               -Werror

               -O2
               -threaded
               -rtsopts
               -with-rtsopts=-N

  build-depends:  okasaki,
                  base          >=4.12    && <4.15,
                  hspec         >=2.6.0   && <2.8,
                  QuickCheck    >=2.12    && <2.14
